--- a/package.json
+++ b/package.json
@@ -36,6 +36,14 @@
     "license": "ISC",
     "dependencies": {
         "@material-ui/core": "^4.11.4",
-        "@material-ui/icons": "^4.11.2"
+        "@material-ui/icons": "^4.11.2",
+        "chart.js": "^3.2.1",
+        "jwt-decode": "^3.1.2",
+        "react-bootstrap": "^1.6.0",
+        "react-chartjs-2": "^3.0.3",
+        "react-data-table-component": "^6.11.7",
+        "react-router-dom": "^5.2.0",
+        "styled-components": "^5.3.0",
+        "sweetalert2-react": "^0.8.3"
     }
 }
